<resources>
    <string name="app_name">CarMeets</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgottenpass">Forgotten Password</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="preferences">Preferences</string>
    <string name="availability">Availability</string>
    <string name="car_info">Car Info</string>
    <string name="gender">Gender</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="invalid_username">Invalid Username or Empty</string>
    <string name="invalid_password">Invalid Password or Empty</string>
    <string name="invalid_location">Invalid Location or Empty</string>
    <string name="invalid_age">Invalid Age or Empty</string>
    <string name="invalid_preferences">Invalid Preferences or Empty</string>
    <string name="invalid_availability_format">Invalid Availability Format (17:00-20:00) or Empty</string>
    <string name="invalid_car_info">Invalid Car Info or Empty</string>
    <string name="invalid_gender_enter_male_or_female">Invalid Gender (Enter Male or Female) or Empty</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="car">Car</string>
</resources>
