<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gss130.carmeets.LoginActivity">

    <EditText
        android:background="@drawable/border"
        android:layout_marginTop="61dp"
        android:id="@+id/username"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:hint="@string/username" />

    <EditText
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:layout_marginTop="30dp"
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username" />

    <Button
        android:id="@+id/btn_log"
        android:text="@string/login"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Register"
        android:layout_height="40dp"
        android:id="@+id/btn_register"
        android:layout_below="@+id/btn_log"
        android:layout_alignStart="@+id/btn_log"
        android:layout_alignEnd="@+id/btn_log"
        android:layout_width="110dp" />

    <Button
        android:id="@+id/btn_forgot"
        android:text="@string/forgottenpass"
        android:textColor="@color/pass"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/carmeetslogo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username"
        android:id="@+id/username_error"
        android:textColor="#f83a23"
        android:visibility="invisible"
        android:textSize="12sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:id="@+id/password_error"
        android:textColor="#f83a23"
        android:visibility="invisible"
        android:textSize="12sp"/>
</RelativeLayout>
